{
    "name": "GameControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "466dc19f-347f-480b-aadf-c07bec99cce8",
            "actions": [
                {
                    "name": "Switch1",
                    "type": "Button",
                    "id": "0a0f171d-a2e5-41fb-b879-1da0efdbff50",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Switch2",
                    "type": "Button",
                    "id": "758eb9ba-fd4c-4c99-b04f-23fa3e9f55d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Switch3",
                    "type": "Button",
                    "id": "a49fb976-13ea-40d7-aea5-27ed6de01389",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Switch4",
                    "type": "Button",
                    "id": "d0c818cd-c3e9-4103-b304-9007ed2f3bb0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Play1",
                    "type": "Button",
                    "id": "6a7df2d4-aaf2-416e-9abf-bacf314c371a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Play2",
                    "type": "Button",
                    "id": "96f72b35-31c8-4923-9edc-62968264de6c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Play3",
                    "type": "Button",
                    "id": "921df47b-e808-402d-b94c-517fd2ed19dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Play4",
                    "type": "Button",
                    "id": "5bf06bf8-e809-46fd-87d7-bc453af6e198",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eac095bc-ff05-41f8-b945-992c90d64f55",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cda60241-7de3-4536-bd7e-385a7a8fa620",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f15afd91-d339-4417-8899-6bebfbd0fd7c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb53ef36-51bb-4fcf-bb30-0be96406488a",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1c3ac06-fa36-4350-abe7-3fc2b8159836",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Play1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61d6d384-28d1-4995-83db-076fb27820ee",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Play2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8e426be-b61d-4940-9753-a0a015721747",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Play3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f68b010-6203-4fc2-aa36-a8c452ab046f",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Play4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}